# green_tracker

./: .env.example  .gitignore  CHANGELOG.md  ENV_CONFIG.md  Makefile  README.md  screen_guide.md
backend/: .gitignore  README.md  check_table_structure.py  init_db.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js  test_collection_session.py
backend/api/: Preview.json  __init__.py
backend/api/routes/: __init__.py  admin_database.py  algorithm.py  api_key.py  auth.py  collection_session.py  device.py  feedback.py  field.py  file_upload.py  log.py  raw_data.py
backend/api/schemas/: __init__.py  algorithm.py  api_key.py  auth.py  collection_session.py  device.py  feedback.py  field.py  raw_data.py  raw_data_upload.py
backend/database/: create_user_database.py  database_initializer.py  main_db.py  user_db_manager.py
backend/database/db_builder/: __init__.py  build_all.py  collection_session_table.py  device_table.py  feedback_table.py  field_table.py  manage_user_tables.py  raw_data_table.py  user_raw_data_table.py  user_table.py
backend/database/db_models/: __init__.py  collection_session_model.py  device_model.py  feedback_model.py  field_model.py  meta_model.py  (+3 more)
backend/migrations/: add_device_id_column.py
backend/mqtt/: __init__.py  device_manager.py  mosquitto_manager.py  mqtt_client.py  routes.py  schemas.py  service.py
backend/routes/: auth.py
backend/schemas/: __init__.py
backend/storage/: container_manager.py  dockerfile_generator.py  image_build_service.py  minio_client.py  storage_manager.py  test_storage.py
backend/utils/: cache_manager.py  email_service.py  image_processor.py
(+262 files in other folders)
